# motulator

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  helpers.py  plot_vector_ctrl_pmsm_2kw.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sim.py  simulate_sensored.py  simulate_sensorless.py  simulate_vhz.py
.github/workflows/: build.yml  pre-commit.yml  pull_request.yml  python-publish.yml  update_gh-pages.yml
Docs/source/: conf.py  config.rst  index.rst  modules.rst
config/: ctrl_scalar_im_2kW.py  ctrl_scalar_im_45kW.py  ctrl_sensored_vector_im_2kW.py  ctrl_sensored_vector_im_45kW.py  ctrl_sensored_vector_pmsm_2kW.py  ctrl_sensored_vector_syrm_7kW.py  ctrl_sensorless_vector_im_2kW.py  ctrl_sensorless_vector_im_45kW.py  ctrl_sensorless_vector_pmsm_2kW.py  ctrl_sensorless_vector_syrm_7kW.py  ctrl_vector_im_2kW.py  ctrl_vector_im_45kW.py  ctrl_vector_pmsm_2kW.py  ctrl_vector_syrm_7kW.py  ctrl_vhz_im_2kW.py  ctrl_vhz_im_45kW.py  mdl_im_2kW.py  mdl_im_45kW.py  mdl_pmsm_2kW.py  mdl_syrm_7kW.py
control/: common.py
control/im/: scalar.py  vector.py  vhz.py
control/sm/: opt_refs.py  torque.py  vector.py
docs/: .buildinfo  2dof_pi_ctrl.html  README.md  bibliography.html  contributing.html  converters.html  current_ctrl.html  genindex.html  index.html  induction_motor.html  installation.html  mechanics.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  sg_execution_times.html  speed_ctrl.html  synchronous_motor.html  system.html  usage.html
docs/.doctrees/: environment.pickle
docs/_modules/: helpers.html  index.html  sim.html
docs/_sources/: 2dof_pi_ctrl.rst  2dof_pi_ctrl.rst.txt  current_ctrl.rst  index.rst  induction_motor.rst  induction_motor.rst.txt  installation.md  installation.rst  mechanics.rst.txt  sg_execution_times.rst  speed_ctrl.rst  system.rst  usage.rst
docs/_static/: documentation_options.js
docs/auto_examples/: index.html  sg_execution_times.html
docs/autoapi/: index.html
docs/control/: common.html  control_system.html  current_ctrl.html  design_notes.html  im.html  observer.html  observers.html  sm.html  speed_ctrl.html
docs/drive_examples/: index.html  sg_execution_times.html
docs/grid_examples/: index.html  sg_execution_times.html
docs/model/: ac_filter.html  common.html  converters.html  index.html  machines.html  mechanics.html  system.html
docs/source/: 2dof_pi_ctrl.rst  conf.py  contributing.md  contributing.rst  converters.rst  current_ctrl.rst  index.md  index.rst  induction_machine.rst  induction_motor.rst  inkscape_textext_preamble.sty  installation.md  installation.rst  mechanics.rst  observer.rst  refs.bib  speed_ctrl.rst  synchronous_machine.rst  synchronous_motor.rst  system.rst  tutorial.rst  usage.md  usage.rst
examples/: README.md  README.txt  vector_ctrl_im_2kW.py  vector_ctrl_pmsm_2kW.py  vector_ctrl_syrm_7kW.py
examples/drive/: README.txt
examples/flux_maps/: README.txt  plot_obs_vhz_ctrl_pmsyrm_thor.py
examples/flux_vector/: ABB_400rpm_map.mat  README.txt  plot_flux_vector_im_2kw.py  plot_flux_vector_pmsm_2kw.py  plot_flux_vector_pmsyrm_5kw.py  plot_flux_vector_syrm_7kw.py
examples/getting_started/: README.txt  motulator_basic_tutorial.py
examples/grid/: README.txt  plot_grid_following_control_grid_converter_10kVA.py
examples/grid_following/: README.txt  plot_gfl_10kva.py  plot_gfl_dc_bus_10kva.py  plot_gfl_lcl_10kva.py  plot_grid_following_control_LCL_grid_converter_10kVA.py  plot_grid_following_control_grid_converter_10kVA.py  plot_grid_following_control_vdc_mode_grid_converter_10kVA.py
examples/grid_forming/: README.txt  plot_gfm_obs_13kva.py  plot_gfm_rfpsc_13kva.py  plot_observer_gfm_control_grid_converter_12.5kVA.py  plot_power_synchronization_control_grid_converter_12.5kVA.py  plot_reference_feedforward_power_synchronization_control_grid_converter_12.5kVA.py
examples/im/: README.txt  plot_obs_vhz_ctrl_6step_im_2kw.py  plot_obs_vhz_ctrl_im_2kw.py  plot_vector_ctrl_6step_im_2kw.py  plot_vector_ctrl_im_2kW.py  plot_vector_ctrl_im_2kw.py  plot_vhz_ctrl_6step_im_2kw.py  plot_vhz_ctrl_im_2kW.py  plot_vhz_ctrl_im_2kw.py
examples/notebooks/: README.md  motulator_basic_tutorial.ipynb
examples/obs_vhz/: README.txt  plot_obs_vhz_ctrl_im_2kw.py  plot_obs_vhz_ctrl_pmsm_2kw.py  plot_obs_vhz_ctrl_pmsm_2kw_two_mass.py  plot_obs_vhz_ctrl_pmsyrm_thor.py  plot_obs_vhz_ctrl_syrm_7kw.py
examples/scripts/: vector_ctrl_im_2kW.py  vector_ctrl_syrm_7kW.py  vhz_ctrl_im_2kW.py
examples/signal_inj/: README.txt  plot_signal_inj_pmsm_2kw.py  plot_signal_inj_syrm_7kw.py
examples/six_step/: README.txt
examples/sm/: README.txt  plot_flux_vector_pmsm_2kw.py  plot_flux_vector_syrm_7kw.py  plot_obs_vhz_ctrl_pmsm_2kw.py  plot_obs_vhz_ctrl_syrm_7kw.py  plot_signal_inj_pmsm_2kw.py  plot_signal_inj_syrm_7kw.py  plot_vector_ctrl_pmsm_2kW.py  plot_vector_ctrl_pmsm_2kw.py  plot_vector_ctrl_pmsm_2kw_injection_.py  plot_vector_ctrl_syrm_7kW.py  plot_vector_ctrl_syrm_7kw.py
examples/sm_with_flux_maps/: plot_obs_vhz_ctrl_pmsyrm_thor.py
examples/sm_with_signal_inj/: plot_signal_inj_pmsm_2kw.py  plot_signal_inj_syrm_7kw.py
model/: converter.py  im_drive.py  interfaces.py  mech.py  sm_drive.py
motulator/: __init__.py  _helpers.py  _plots.py  _utils.py  helpers.py  plots.py  simulation.py
source/: fourier transform.py  helpers.py  main.py  sim.py  simulate_environment.py  simulation.py
(+1192 files in other folders)
