[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "pep8"
column_limit = 79
no_spaces_around_selected_binary_operators = "*,/"
split_before_first_argument = "True"
coalesce_brackets = "True"
spaces_before_comment = 2

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-few-public-methods",
]
