[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motulator"
version = "0.7.2"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
]
requires-python = ">=3.12"
authors = [
    {name = "Marko Hinkkanen", email = "marko.hinkkanen@aalto.fi"}
]
description = "Motor Drive and Grid Converter Simulator in Python"
readme = "README.md"
license = "MIT"
keywords = [
    "control",
    "converter",
    "grid",
    "electric",
    "inverter",
    "machine",
    "motor",
    "power",
    "simulation",
]
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ruff",
    "toml",
    "pre-commit",
    "pyright",
    "pip-audit",
]
doc = [
    "numpydoc",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx-book-theme",
    "esbonio",
    "myst-parser",
    "sphinxcontrib-bibtex",
]

[project.urls]
Homepage = "https://github.com/Aalto-Electric-Drives/motulator"
Documentation = "https://Aalto-Electric-Drives.github.io/motulator/"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "PL"]
ignore = ["PLR2004"]  # Ignore magic value warnings
pylint = {max-args = 12}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true

[tool.pyright]
include = ["motulator", "examples"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.pytest_cache",
]
typeCheckingMode = "standard"
