[metadata]
name = forkofthemotulator
version = 0.0.4
author = JoonaKukkonen
author_email = joona.j.kukkonen@aalto.fi
description = A package for the motulator fork
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoonaKukkonen/motulator
project_urls =
    Bug Tracker = https://github.com/JoonaKukkonen/motulator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
